--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>hi</title>
   <style>
-      input[type="range"]{
+      /*input[type="range"]{
         -webkit-appearance: none;
         appearance: none;
         background: transparent;
@@ -41,7 +41,7 @@
       }
       input[type="range"]::-ms-fill-upper {
         background-color: #9a905d;
-      }
+      }*/
 
   </style>
 </head>
