--- a/serving_static/static/stylesheet.css
+++ b/serving_static/static/stylesheet.css
@@ -18,13 +18,52 @@ body {
     display: flex;
 }
 .power[type=range][orient=vertical]{
-    writing-mode: bt-lr; /* IE */
-    -webkit-appearance: slider-vertical; /* Chromium */
-    width: 50%;
-    height: 90%;
+    -webkit-appearance: none; /* Chromium */
+    transform: rotate(270deg) translateX(-35%);
+    width: 90%;
+    height: 30%;
     padding: 0 5px;
-
+    overflow: hidden;
+    background: linear-gradient(to right, #FFF 0%, #82CFD0 00%, #fff 00%, #fff 100%);
+    border: solid 0.1rem #82CFD0;
+    border-radius: 5vh;
+    outline: none;
+    transition: background 450ms ease-in;
 }
+.power::-webkit-slider-thumb {
+    opacity: 0
+}
+/*
+.power[type=range]::-webkit-slider-runnable-track {
+    height: 5em;
+    border: none;
+    border-radius: 0.5em;
+    background: #EFEFEF;
+    color: #13bba4;
+    box-shadow: none;
+    -webkit-appearance: none;
+    width: 10em;
+}
+.power[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #777;
+    opacity: 0.75;
+    transform: translateY(-10px);
+    width: 0;
+    height: 0;
+    border-radius: 4em;
+    border: none;
+    box-shadow: 10px 0 0 80px #43e5f7;
+    background: #434343;
+    -webkit-appearance: none;
+    cursor: ew-resize;
+    overflow: hidden;
+}
+.power::-webkit-slider-runnable-track {
+    background: green;
+}
+
+*/
 .buttons{
     height:10vh;
     justify-content: space-evenly;
@@ -35,175 +74,6 @@ button{
     border: none;
     height: 8vh;
     width: 8vh;
-
-
-}
-
-/*progress support*/
-.power[type=range].styled-slider.slider-progress {
-    --range: 100;
-    --ratio: 1;
-    --sx: calc(0.5 * 0.1px + var(--ratio) * (100% - 0.1px));
-}
-
-.power[type=range].styled-slider:focus {
-    outline: none;
-}
-
-/*webkit*/
-.power[type=range].styled-slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 0.1px;
-    height: 0;
-    border-radius: 0;
-    background: #FFFFFF;
-    border: none;
-    box-shadow: none;
-    margin-top: 0;
-}
-
-.power[type=range].styled-slider::-webkit-slider-runnable-track {
-    height: 2.9em;
-    border: none;
-    border-radius: 0.5em;
-    background: #EFEFEF;
-    box-shadow: none;
-}
-
-.power[type=range].styled-slider::-webkit-slider-thumb:hover {
-    background: #0061C3;
-}
-
-.power[type=range].styled-slider:hover::-webkit-slider-runnable-track {
-    background: #E5E5E5;
-}
-
-.power[type=range].styled-slider::-webkit-slider-thumb:active {
-    background: #2F98F9;
-}
-
-.power[type=range].styled-slider:active::-webkit-slider-runnable-track {
-    background: #F5F5F5;
-}
-
-.power[type=range].styled-slider.slider-progress::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, #007CF8, #008000) 0/var(--sx) 100% no-repeat, #EFEFEF;
-}
-
-.power[type=range].styled-slider.slider-progress:hover::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, #0061C3, #008000) 0/var(--sx) 100% no-repeat, #E5E5E5;
-}
-
-.power[type=range].styled-slider.slider-progress:active::-webkit-slider-runnable-track {
-    background: linear-gradient(to right, #2F98F9, #008000) 0/var(--sx) 100% no-repeat, #F5F5F5;
-}
-
-/*mozilla*/
-.power[type=range].styled-slider::-moz-range-thumb {
-    width: 0.1px;
-    height: 0;
-    border-radius: 4em;
-    background: #007CF8;
-    border: none;
-    box-shadow: 0 0 2px black;
-}
-
-.power[type=range].styled-slider::-moz-range-track {
-    height: 2.9em;
-    border: none;
-    border-radius: 0.5em;
-    background: #EFEFEF;
-    box-shadow: none;
-}
-
-.power[type=range].styled-slider::-moz-range-thumb:hover {
-    background: #0061C3;
-}
-
-.power[type=range].styled-slider:hover::-moz-range-track {
-    background: #E5E5E5;
-}
-
-.power[type=range].styled-slider::-moz-range-thumb:active {
-    background: #2F98F9;
-}
-
-.power[type=range].styled-slider:active::-moz-range-track {
-    background: #F5F5F5;
-}
-
-.power[type=range].styled-slider.slider-progress::-moz-range-track {
-    background: linear-gradient(to right, #007CF8, #008000) 0/var(--sx) 100% no-repeat, #EFEFEF;
-}
-
-.power[type=range].styled-slider.slider-progress:hover::-moz-range-track {
-    background: linear-gradient(to right, #0061C3, #008000) 0/var(--sx) 100% no-repeat, #E5E5E5;
-}
-
-.power[type=range].styled-slider.slider-progress:active::-moz-range-track {
-    background: linear-gradient(to right, #2F98F9, #008000) 0/var(--sx) 100% no-repeat, #F5F5F5;
-}
-
-/*ms*/
-.power[type=range].styled-slider::-ms-fill-upper {
-    background: transparent;
-    border-color: transparent;
-}
-
-.power[type=range].styled-slider::-ms-fill-lower {
-    background: transparent;
-    border-color: transparent;
-}
-
-.power[type=range].styled-slider::-ms-thumb {
-    width: 0.1px;
-    height: 0;
-    border-radius: 4em;
-    background: #007CF8;
-    border: none;
-    box-shadow: 0 0 2px black;
-    margin-top: 0;
-    box-sizing: border-box;
-}
-
-.power[type=range].styled-slider::-ms-track {
-    height: 2.9em;
-    border-radius: 0.5em;
-    background: #EFEFEF;
-    border: none;
-    box-shadow: none;
-    box-sizing: border-box;
-}
-
-.power[type=range].styled-slider::-ms-thumb:hover {
-    background: #0061C3;
-}
-
-.power[type=range].styled-slider:hover::-ms-track {
-    background: #E5E5E5;
-}
-
-.power[type=range].styled-slider::-ms-thumb:active {
-    background: #2F98F9;
-}
-
-.power[type=range].styled-slider:active::-ms-track {
-    background: #F5F5F5;
-}
-
-.power[type=range].styled-slider.slider-progress::-ms-fill-lower {
-    height: 2.9em;
-    border-radius: 0.5em 0 0 0.5em;
-    margin: 0 0 0 0;
-    background: linear-gradient(to right, #007CF8, #008000);
-    border: none;
-    border-right-width: 0;
-}
-
-.power[type=range].styled-slider.slider-progress:hover::-ms-fill-lower {
-    background: linear-gradient(to right, #0061C3, #008000);
-}
-
-.power[type=range].styled-slider.slider-progress:active::-ms-fill-lower {
-    background: linear-gradient(to right, #2F98F9, #008000);
+    background: #82CFD0;
+    opacity: 0.5;
 }
