--- a/serving_static/template/index.html
+++ b/serving_static/template/index.html
@@ -17,18 +17,14 @@
 <div class="powerContainer">
 
     <input class="power" type="range" id="speed" name="speed"
-           min="0" max="100" value="0" step="1" orient="vertical" oninput="sendData()">
+           min="0" max="100" value="0" step="1" orient="vertical" oninput="sendData('no', 'no')">
     <label for="speed"></label>
-    <script type="text/javascript">
-        document.getElementById("speed").oninput = function() {
 
-        };
-    </script>
 
 </div>
 <div class="buttons">
-  <button class="horn">hup! hup!</button>
-  <button class="light">Light</button>
+  <button class="horn" onclick="sendData('on', 'no')">hup! hup!</button>
+  <button class="light" onclick="sendData('no', 'change')">Light</button>
 </div>
 
 
