--- a/serving_static/template/index.html
+++ b/serving_static/template/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
 
-<div class="container">
 
+<div class="backgroundWrapper">
+    <div class="particle particle-1"></div>
+    <div class="particle particle-2"></div>
+    <div class="particle particle-3"></div>
+    <div class="particle particle-4"></div>
 </div>
-<div class="header">Steuerung</div>
+
+<div class="header">
+
+    <h1 class="headerTitle">Steuerung</h1>
+</div>
 <div class="powerContainer">
 
     <input class="power" type="range" id="speed" name="speed"
@@ -23,11 +31,9 @@
 
 </div>
 <div class="buttons">
-  <button class="horn" onclick="sendData('on', 'no')">hup! hup!</button>
-  <button class="light" onclick="sendData('no', 'change')">Light</button>
+  <button class="horn" onclick="sendData('on', 'no')">🔊</button>
+  <button class="light" onclick="sendData('no', 'change')">💡</button>
 </div>
-
-
 
 
 
