--- a/serving_static/static/stylesheet.css
+++ b/serving_static/static/stylesheet.css
@@ -1,11 +1,15 @@
 :root{
     --background: rgba(51, 51, 51, 1);
-    --backgroundObject: rgba(51, 51, 51, 0.2);
-    --fontColor: #AAA
+    --backgroundObject: rgba(230, 230, 253, 0.2);
+    --linearGradient: rgba(2, 58, 199, 1);
+    --fontColor: #AAA;
+    --startColor: #34dbeb;
+    --stopColor: #2b1e9e;
 }
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     margin: 0;
+    color: #82CFD0;
     background: var(--background);
 }
 .container{
@@ -22,7 +26,7 @@ body {
 }
 .headerTitle{
     margin: 0;
-    font-size: 4rem;
+    font-size: 4.5rem;
     padding-top: 0.4em;
     font-weight: 250;
 }
@@ -38,13 +42,13 @@ body {
     height: 20em;
     padding: 0 5px;
     overflow: hidden;
-    background: linear-gradient(to right, var(--backgroundObject) 0%, rgba(130, 207, 208, 1) 00%, var(--backgroundObject) 00%, var(--backgroundObject) 100%);
+    background: linear-gradient(to right, var(--backgroundObject) 0%, var(--linearGradient) 00%, var(--backgroundObject) 00%, var(--backgroundObject) 100%);
     border: solid 0.1rem #82CFD0;
     border-radius: 5vh;
     outline: none;
     /*transition: background 450ms ease-in; todo immer emoji mittig zentzrieren*/
-    backdrop-filter: blur(0.25em);
-    -webkit-backdrop-filter: blur(0.25em);
+    backdrop-filter: blur(1em);
+    -webkit-backdrop-filter: blur(0.5em);
 }
 .power::-webkit-slider-thumb {
     opacity: 0
@@ -99,6 +103,7 @@ button{
     z-index: -1;
     height: 100vh;
     width:100vw;
+    overflow: hidden;
 }
 
 
